<resources>
  <string name="app_name">My Application</string>
  <string name="some_test_text">Some test text</string>
  <string name="phone_name">Samsung G920F Galaxy S6</string>
  <string name="add_to_favorites">add to favorites</string>
  <string name="phone_code">SM-A225FZKDSEK</string>
  <string name="phone_image">phone image</string>
  <string name="color">Цвет</string>
  <string name="phone_slide">phone_slide</string>
  <string name="about_product_title">О товаре</string>
  <string name="about_product_description_title">Полное описание</string>
  <string name="about_product_description">Новый флагман, как и положено, получился солидным, стильным и очень мощным. Это одна из тех моделей, которые приобретаются не только из-за желания быть всегда на связи или различных функциональных возможностей, для изучения которых определенно стоит выделить время. Обладание этим гаджетом дает владельцу более эксклюзивные, престижный статус успешного, довольного жизнью человека.</string>
  <string name="characteristics_title">Характеристики</string>
  <string name="characteristics_full">Все характеристики</string>
  <string name="display">Экран</string>
  <string name="diagonal">Диагональ экрана</string>
  <string name="diagonal_value">5.1</string>
  <string name="resolution">Разрешение экрана</string>
  <string name="resolution_value">2560x1440</string>
  <string name="phone_case">Корпус</string>
  <string name="technologies">Технологии</string>
  <string name="technologies_value">Акселерометр, Барометр,\n Гироскоп, Датчик\n освещения, Датчик\n приближения, Датчик\n Холла, Компас, Сканер\n отпечатка пальца</string>
  <string name="phone_sizes">Размеры</string>
  <string name="sizes_value">143.4 x 70.5 x 6.8 мм</string>
  <string name="phone_price">100</string>
  <string name="currency_usd">$</string>
  <string name="buy">Купить</string>
  <string name="order_title">Оформление заказа</string>
  <string name="white">Белый</string>
  <string name="black">Черный</string>
  <string name="blue">Синий</string>
  <string name="gold">Золото</string>
  <string name="contacts_title">Контактные данные</string>
  <string name="input_hint_name">Имя</string>
  <string name="input_hint_number">Телефон</string>
  <string name="input_hint_address">Адрес</string>
  <string name="input_hint_email">Электронная почта</string>
  <string name="delivery_title">Доставка</string>
  <string name="delivery_option_1">Отделение новой почты</string>
  <string name="delivery_option_2">Курьер</string>
  <string name="delivery_option_3">Самовывоз</string>
  <string name="option_notes">Примечания</string>
  <string name="call_me_checkbox">Не перезванивать</string>
  <string name="comment">Комментарий</string>
  <string name="cancel">Отмена</string>
  <string name="create_order_text">Оформить заказ</string>
</resources>