<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/start_guide_line"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="15dp"
    />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/end_guide_line"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintGuide_end="15dp"
    />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/top_guide_line"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="15dp"
    />

  <TextView
    android:id="@+id/order_page_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/order_title"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:textSize="@dimen/title_lg"
    app:layout_constraintTop_toBottomOf="@id/top_guide_line"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <androidx.constraintlayout.widget.Barrier
    android:id="@+id/title_barrier"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:barrierDirection="bottom"
    app:constraint_referenced_ids="order_page_title"
    />

  <Space
    android:id="@+id/title_space"
    android:layout_width="0dp"
    android:layout_height="15dp"
    app:layout_constraintTop_toBottomOf="@id/title_barrier"
    />

  <ImageView
    android:id="@+id/phone_image"
    android:layout_width="85dp"
    android:layout_height="100dp"
    android:src="@drawable/phone_1"
    android:contentDescription="@string/phone_image"
    app:layout_constraintTop_toBottomOf="@id/title_space"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    />

  <TextView
    android:id="@+id/phone_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phone_name"
    android:textSize="14sp"
    android:textColor="@color/black"
    android:layout_marginStart="10dp"
    app:layout_constraintTop_toTopOf="@id/phone_image"
    app:layout_constraintStart_toEndOf="@id/phone_image"
    />

  <TextView
    android:id="@+id/phone_code"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phone_code"
    android:textColor="@color/black"
    android:textSize="12sp"
    app:layout_constraintTop_toBottomOf="@id/phone_name"
    app:layout_constraintStart_toStartOf="@id/phone_name"
    />

  <TextView
    android:id="@+id/phone_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phone_price"
    android:textColor="@color/red"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintTop_toTopOf="@id/phone_image"
    app:layout_constraintEnd_toStartOf="@id/currency"
    />

  <TextView
    android:id="@+id/currency"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/currency_usd"
    android:textColor="@color/red"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    app:layout_constraintBaseline_toBaselineOf="@id/phone_price"
    />

  <androidx.constraintlayout.widget.Barrier
    android:id="@+id/info_barrier"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:barrierDirection="bottom"
    app:constraint_referenced_ids="phone_image"
    />

  <Space
    android:id="@+id/info_space"
    android:layout_width="0dp"
    android:layout_height="15dp"
    app:layout_constraintTop_toBottomOf="@id/info_barrier"
    />

  <TextView
    android:id="@+id/option_color"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/color"
    android:textSize="@dimen/title_lg"
    android:textStyle="bold"
    android:textColor="@color/black"
    app:layout_constraintTop_toBottomOf="@id/info_space"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    />
  <View
    android:id="@+id/color_divider"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:background="@color/black"
    app:layout_constraintTop_toBottomOf="@id/option_color"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />
  
  <RadioGroup
    android:id="@+id/color_radio_group"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintTop_toBottomOf="@id/color_divider"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    app:layout_constraintHorizontal_chainStyle="spread"
    >
      <RadioButton
        android:id="@+id/radio_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/white"
        android:layout_weight="1"
        />

      <RadioButton
        android:id="@+id/radio_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/black"
        android:layout_weight="1"
        />

      <RadioButton
        android:id="@+id/radio_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:layout_weight="1"
        />

      <RadioButton
        android:id="@+id/radio_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gold"
        android:layout_weight="1"
        />

  </RadioGroup>

  <TextView
    android:id="@+id/contacts_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/contacts_title"
    android:textColor="@color/black"
    android:textSize="@dimen/title_lg"
    android:textStyle="bold"
    android:layout_marginTop="5dp"
    app:layout_constraintTop_toBottomOf="@id/color_radio_group"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    />

  <View
    android:id="@+id/contacts_divider"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:background="@color/black"
    app:layout_constraintTop_toBottomOf="@id/contacts_title"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <EditText
    android:id="@+id/input_name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/input_hint_name"
    app:layout_constraintTop_toBottomOf="@id/contacts_divider"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    android:importantForAutofill="no"
    android:inputType="text"
    android:layout_marginTop="5dp"
    />

  <EditText
    android:id="@+id/input_number"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/input_hint_number"
    app:layout_constraintTop_toBottomOf="@id/input_name"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    android:importantForAutofill="no"
    android:inputType="number"
    android:layout_marginTop="5dp"
    />

  <EditText
    android:id="@+id/input_email"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/input_hint_email"
    app:layout_constraintTop_toBottomOf="@id/input_number"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    android:importantForAutofill="no"
    android:inputType="textEmailAddress"
    android:layout_marginTop="5dp"
    />

  <EditText
    android:id="@+id/input_address"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/input_hint_address"
    app:layout_constraintTop_toBottomOf="@id/input_email"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    android:importantForAutofill="no"
    android:inputType="text"
    android:layout_marginTop="5dp"
    />

  <TextView
    android:id="@+id/option_delivery"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/delivery_title"
    android:textColor="@color/black"
    android:textSize="@dimen/title_lg"
    android:textStyle="bold"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toBottomOf="@id/input_address"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <View
    android:id="@+id/delivery_divider"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:background="@color/black"
    app:layout_constraintTop_toBottomOf="@id/option_delivery"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <RadioGroup
    android:id="@+id/delivery_radio_group"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/delivery_divider"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    >

    <RadioButton
      android:id="@+id/delivery_1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/delivery_option_1"
      />

    <RadioButton
      android:id="@+id/delivery_2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/delivery_option_2"
      />

    <RadioButton
      android:id="@+id/delivery_3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/delivery_option_3"
      />

  </RadioGroup>

  <TextView
    android:id="@+id/option_notes"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/option_notes"
    android:textColor="@color/black"
    android:textSize="@dimen/title_lg"
    android:textStyle="bold"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toBottomOf="@id/delivery_radio_group"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <View
    android:id="@+id/notes_divider"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:background="@color/black"
    app:layout_constraintTop_toBottomOf="@id/option_notes"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <CheckBox
    android:id="@+id/notes_checkbox"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/call_me_checkbox"
    app:layout_constraintTop_toBottomOf="@id/notes_divider"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    />

  <EditText
    android:id="@+id/text_area"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:inputType="textMultiLine"
    android:lines="4"
    android:padding="5dp"
    android:hint="@string/comment"
    android:gravity="top"
    android:scrollbars="vertical"
    android:importantForAutofill="no"
    app:layout_constraintTop_toBottomOf="@id/notes_checkbox"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    android:background="@drawable/border_white"
    />

  <Button
    android:id="@+id/cancel_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/cancel"
    android:backgroundTint="@color/red"
    app:layout_constraintTop_toBottomOf="@id/text_area"
    app:layout_constraintWidth_percent="0.25"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    />

  <Button
    android:id="@+id/send_button"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/create_order_text"
    android:backgroundTint="@color/green"
    app:layout_constraintWidth_percent="0.65"
    android:layout_marginStart="10dp"
    app:layout_constraintTop_toBottomOf="@id/text_area"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />
</androidx.constraintlayout.widget.ConstraintLayout>