<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/start_guide_line"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintGuide_begin="15dp"
    />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/end_guide_line"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="vertical"
    app:layout_constraintGuide_end="15dp"
    />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/top_guide_line"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="20dp"
    />

  <TextView
    android:id="@+id/phone_name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phone_name"
    android:textSize="@dimen/title_lg"
    android:textColor="@color/black"
    android:textStyle="bold"
    app:layout_constraintTop_toTopOf="@id/top_guide_line"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <TextView
    android:id="@+id/phone_code"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phone_code"
    android:textSize="13sp"
    app:layout_constraintTop_toBottomOf="@id/phone_name"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <androidx.constraintlayout.widget.Group
    android:id="@+id/phone_title_group"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:constraint_referenced_ids="phone_name, phone_code"
    />

  <ImageView
    android:id="@+id/add_to_favorite"
    android:layout_width="23dp"
    android:layout_height="23dp"
    android:src="@drawable/heart"
    app:layout_constraintTop_toTopOf="@id/top_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    android:contentDescription="@string/add_to_favorites"
    />

  <ImageView
    android:id="@+id/phone_preview"
    android:layout_width="140dp"
    android:layout_height="170dp"
    android:layout_marginTop="10dp"
    android:src="@drawable/phone_1"
    android:contentDescription="@string/phone_image"
    app:layout_constraintTop_toBottomOf="@id/phone_code"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <TextView
    android:id="@+id/phone_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phone_price"
    android:textColor="@color/red"
    android:textStyle="bold"
    android:textSize="30sp"
    app:layout_constraintTop_toTopOf="@id/phone_preview"
    app:layout_constraintEnd_toStartOf="@id/currency"
    app:layout_constraintBottom_toBottomOf="@id/phone_preview"
    />

  <TextView
    android:id="@+id/currency"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/currency_usd"
    android:textColor="@color/red"
    app:layout_constraintBaseline_toBaselineOf="@id/phone_price"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    android:layout_marginStart="10dp"
    />

  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/buy"
    android:textColor="@color/white"
    android:backgroundTint="@color/red"
    app:layout_constraintTop_toBottomOf="@id/phone_price"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <TextView
    android:id="@+id/info_text_color"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:text="@string/color"
    android:textSize="12sp"
    app:layout_constraintTop_toTopOf="@id/phone_preview"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintBottom_toTopOf="@id/color_white"
    />

  <View
    android:id="@+id/color_white"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/border_white"
    app:layout_constraintTop_toBottomOf="@id/info_text_color"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintBottom_toTopOf="@id/color_black"
    />

  <View
    android:id="@+id/color_black"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/border_black"
    app:layout_constraintTop_toBottomOf="@id/color_white"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintBottom_toTopOf="@id/color_blue"
    />

  <View
    android:id="@+id/color_blue"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:background="@drawable/border_blue"
    app:layout_constraintTop_toBottomOf="@id/color_black"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintBottom_toTopOf="@id/color_orange"
    />

  <View
    android:id="@+id/color_orange"
    android:layout_width="30dp"
    android:layout_height="30dp"
    android:layout_marginTop="5dp"
    android:background="@drawable/border_orange"
    app:layout_constraintTop_toBottomOf="@id/color_blue"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    />

  <androidx.constraintlayout.widget.Barrier
    android:id="@+id/top_slider_barrier"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:barrierDirection="bottom"
    app:constraint_referenced_ids="phone_preview"
    />

  <Space
    android:id="@+id/slider_barrier_space"
    android:layout_width="0dp"
    android:layout_height="20dp"
    app:layout_constraintTop_toBottomOf="@id/top_slider_barrier"
    />

  <ImageView
    android:id="@+id/phone_slide_1"
    android:layout_width="70dp"
    android:layout_height="130dp"
    android:src="@drawable/phone_2"
    android:contentDescription="@string/phone_slide"
    />

  <ImageView
    android:id="@+id/phone_slide_2"
    android:layout_width="70dp"
    android:layout_height="130dp"
    android:src="@drawable/phone_3"
    android:contentDescription="@string/phone_slide"
    />

  <ImageView
    android:id="@+id/phone_slide_3"
    android:layout_width="70dp"
    android:layout_height="130dp"
    android:src="@drawable/phone_6"
    android:contentDescription="@string/phone_slide"
    />

  <ImageView
    android:id="@+id/phone_slide_4"
    android:layout_width="70dp"
    android:layout_height="130dp"
    android:src="@drawable/phone_5"
    android:contentDescription="@string/phone_slide"
    />

  <androidx.constraintlayout.helper.widget.Flow
    android:id="@+id/slider_row"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:flow_wrapMode="chain"
    app:flow_horizontalStyle="spread"
    app:layout_constraintTop_toBottomOf="@id/slider_barrier_space"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    app:constraint_referenced_ids="phone_slide_1 ,phone_slide_2, phone_slide_3, phone_slide_4"
    />

  <Space
    android:id="@+id/slider_row_space"
    android:layout_width="0dp"
    android:layout_height="20dp"
    app:layout_constraintTop_toBottomOf="@id/slider_row"
    />

  <TextView
    android:id="@+id/about_product_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/about_product_title"
    android:textColor="@color/black"
    android:textSize="@dimen/title_lg"
    android:textStyle="bold"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/slider_row_space"
    app:layout_constraintEnd_toStartOf="@id/about_product_full"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    />

  <TextView
    android:id="@+id/about_product_full"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/about_product_description_title"
    android:textColor="@color/light_blue"
    android:textStyle="italic"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/slider_row_space"
    app:layout_constraintStart_toEndOf="@id/about_product_title"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    app:layout_constraintBottom_toBottomOf="@id/about_product_title"
    />

  <View
    android:id="@+id/divider_1"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:background="@color/black"
    app:layout_constraintTop_toBottomOf="@id/about_product_title"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <TextView
    android:id="@+id/about_product_description"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/about_product_description"
    android:textColor="@color/black"
    android:layout_marginTop="10dp"
    app:layout_constraintTop_toBottomOf="@id/divider_1"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <Space
    android:id="@+id/slider_characteristics_space"
    android:layout_width="0dp"
    android:layout_height="20dp"
    app:layout_constraintTop_toBottomOf="@id/about_product_description"
    />

  <TextView
    android:id="@+id/characteristics_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/characteristics_title"
    android:textColor="@color/black"
    android:textSize="@dimen/title_lg"
    android:textStyle="bold"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/slider_characteristics_space"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toStartOf="@id/characteristics_full"
    />

  <TextView
    android:id="@+id/characteristics_full"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/characteristics_full"
    android:textColor="@color/light_blue"
    android:textStyle="italic"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/slider_characteristics_space"
    app:layout_constraintStart_toEndOf="@id/characteristics_title"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    app:layout_constraintBottom_toBottomOf="@id/characteristics_title"
    />

  <View
    android:id="@+id/divider_2"
    android:layout_width="0dp"
    android:layout_height="1dp"
    android:background="@color/black"
    app:layout_constraintTop_toBottomOf="@id/characteristics_title"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <TextView
    android:id="@+id/display"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/display"
    android:textColor="@color/black"
    android:textSize="@dimen/title_md"
    android:textStyle="bold"
    android:layout_marginTop="5dp"
    app:layout_constraintTop_toBottomOf="@id/divider_2"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    />

  <TextView
    android:id="@+id/diagonal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/diagonal"
    android:textColor="@color/black"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/display"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toStartOf="@id/diagonal_value"
    />

  <TextView
    android:id="@+id/diagonal_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/diagonal_value"
    android:textColor="@color/black"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/display"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    app:layout_constraintStart_toEndOf="@id/diagonal"
    />

  <TextView
    android:id="@+id/resolution"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/resolution"
    android:textColor="@color/black"
    android:layout_marginTop="3dp"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/diagonal"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toStartOf="@id/resolution_value"
    />

  <TextView
    android:id="@+id/resolution_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/resolution_value"
    android:textColor="@color/black"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toTopOf="@id/resolution"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    app:layout_constraintStart_toEndOf="@id/resolution"
    />

  <TextView
    android:id="@+id/phone_case"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phone_case"
    android:textColor="@color/black"
    android:textSize="@dimen/title_md"
    android:textStyle="bold"
    android:layout_marginTop="5dp"
    app:layout_constraintTop_toBottomOf="@id/resolution"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    />

  <TextView
    android:id="@+id/technologies"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/technologies"
    android:textColor="@color/black"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/phone_case"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toStartOf="@id/technologies_value"
    />

  <TextView
    android:id="@+id/technologies_value"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:text="@string/technologies_value"
    android:textColor="@color/black"
    android:gravity="end"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toTopOf="@id/technologies"
    app:layout_constraintStart_toEndOf="@id/technologies"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

  <TextView
    android:id="@+id/sizes"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phone_sizes"
    android:textColor="@color/black"
    android:layout_marginTop="5dp"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toBottomOf="@id/technologies_value"
    app:layout_constraintStart_toStartOf="@id/start_guide_line"
    app:layout_constraintEnd_toStartOf="@id/sizes_value"
    />

  <TextView
    android:id="@+id/sizes_value"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sizes_value"
    android:textColor="@color/black"
    app:layout_constraintHorizontal_chainStyle="spread_inside"
    app:layout_constraintTop_toTopOf="@id/sizes"
    app:layout_constraintStart_toEndOf="@id/sizes"
    app:layout_constraintEnd_toEndOf="@id/end_guide_line"
    />

</androidx.constraintlayout.widget.ConstraintLayout>